# infomap-nlp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  env.h
admin/: Makefile.am  Makefile.data.in  Makefile.filenames  Makefile.in  default-params.in  filenames.h  infomap-build.in  infomap-install.in  install.control  stop.list  valid_chars.en
doc/: Makefile.am  Makefile.in
doc/html/: Makefile.am  Makefile.in  algorithm.html  contact.html  implementation_guide.html  index.html  input_formats.html  troubleshooting.html  user_manual.html
doc/html/tutorial/: Makefile.am  Makefile.in  background.html  index.html  multi-file.html  single-doc.html  single-file.html
doc/man/: Makefile.am  Makefile.in
doc/man/man1/: Makefile.am  Makefile.in  associate.1  count_artvec.1  count_wordvec.1  encode_wordvec.1  infomap-build.1  infomap-install.1  prepare_corpus.1  print_doc.1  svdinterface.1  write_text_params.1
doc/man/man5/: Makefile.am  Makefile.in  infomap-install.control.5
lib/: Makefile.in  model_params.c  model_params.h  utils.c  utils.h
preprocessing/: Makefile.am  Makefile.in  count_artvec.c  count_artvec.h  count_wordvec.c  count_wordvec.h  dict.c  dict.h  encode_wordvec.c  encode_wordvec.h  matrix.c  matrix.h  prepare_corpus.c  prepare_corpus.h  preprocessing_env.h  preprocessing_types.h  report.c  report.h  stopper.c  stopper.h  tokenizer.c  tokenizer.h  vector.c  vector.h  word_tree.c  word_tree.h  wordlist.c  wordlist.h  write_text_params.c
preprocessing/.deps/: count_artvec.Po  count_wordvec.Po  dict.Po  encode_wordvec.Po  matrix.Po  prepare_corpus.Po  report.Po  stopper.Po  tokenizer.Po  utils.Po  vector.Po  word_tree.Po  wordlist.Po  write_text_params.Po
search/: Makefile.am  Makefile.in  arrayoutput.c  arrayoutput.h  associate.c  associate.h  files.c  files.h  list.c  list.h  neighbors.c  neighbors.h  print_doc.c  query.c  query.h  search_types.h  search_utils.c  search_utils.h  toc.c  toc.h
search/.deps/: arrayoutput.Po  associate.Po  files.Po  list.Po  model_params.Po  neighbors.Po  print_doc.Po  query.Po  search_utils.Po  toc.Po
svd/: Makefile.am  Makefile.in
svd/svdinterface/: Makefile.am  Makefile.in  README  fixed.h  las2.c  myutils.c  myutils.h  svdinterface.c
svd/svdinterface/.deps/: las2.Po  model_params.Po  myutils.Po  svdinterface.Po
util/: Makefile.am  Makefile.in  dump_word_vectors.c
